# lib/routes/comment.js
@@ -4,8 +4,12 @@ const router = express.Router();
 const controller = require("../controllers/comment");
 
 router.post("/", controller.createComment);
-router.get("/:_id", controller.getCommentByID);
 router.post("/addSubComment/:_id", controller.addSubComment);
+router.get("/:_id", controller.getCommentByID);
+router.get(
+    "/getAllSubCommentCommentById/:_id",
+    controller.getAllSubCommentCommentById
+);
 router.delete(
     "/deleteSubCommentByIDs/:_idComment/:_idSubComment",
     controller.deleteSubCommentByIDs
